<resources>
    <string name="AMinuteAgo">A minute ago</string>
    <string name="About">About</string>
    <string name="Accepting">Accepting</string>
    <string name="Account">Account</string>
    <string name="AccountCreatedOnXXX">Account created on %1$s</string>
    <string name="AccountPrivacy">Account privacy</string>
    <string name="AddBackground">Add background</string>
    <string name="AddUser">Another User</string>
    <string name="Admin">Admin</string>
    <string name="Agree">Agree</string>
    <string name="AnEmailWithYourPAsswordResetSent">An email to reset your password was sent to %1$s.</string>
    <string name="AnHourAgo">An hour ago</string>
    <string name="AnyVentsYouInteractWith">Any vents you interact with will appear here.</string>
    <string name="ApproveOrIgnoreRequests">Approve or ignore requests</string>
    <string name="AreYouSureYouWantToSignOut">Are you sure you want to sign out?</string>
    <string name="AreYouSureYouWishToBlockUser">Are you sure you want to block %1$s? You will not see vents or activity from each other. You can unblock them later if you change your mind.</string>
    <string name="AreYouSureYouWishToDeleteComment">Are you sure you wish to delete this comment?</string>
    <string name="AreYouSureYouWishToDeleteVent">Are you sure you wish to delete this vent?</string>
    <string name="AreYouSureYouWishToRemoveComment">Are you sure you wish to remove this comment?</string>
    <string name="AreYouSureYouWishToRemoveVent">Are you sure you wish to remove this vent?</string>
    <string name="BadAppXX">Optimizer &amp; Booster apps such as %s can cause problems with receiving notifications depending on their settings.</string>
    <string name="BadUsernameOrPassword">Invalid username or password</string>
    <string name="BeFirstToComment">Be first to comment on this vent</string>
    <string name="Bio">Bio</string>
    <string name="BioTooLong">The Bio too long. Maximum is 10,000 characters</string>
    <string name="Block">Block</string>
    <string name="BlockXXX">Block %1$s</string>
    <string name="BlockedUsers">Blocked Users</string>
    <string name="Blocking">Blocking</string>
    <string name="BlocksMeBlurb">%1$s has blocked you. You can block this user back by using the settings menu above</string>
    <string name="BuyEmotions">Buy Emotions</string>
    <string name="BySelectingCreateYouAgree">"By selecting 'Create' you are indicating that you have read and agree to the &lt;a href=http://www.ventfeed.com/privacy>Privacy Policy&lt;/a> and &lt;a href=http://www.ventfeed.com/tos>Terms of Service&lt;/a>."</string>
    <string name="Camera">Camera</string>
    <string name="CantOpenXXX">"Can't open %s"</string>
    <string name="Change">Change</string>
    <string name="ChangeEmail">Change email</string>
    <string name="ChangeEmailAddress">Change email address</string>
    <string name="ChangeInterests">Change interests</string>
    <string name="ChangePassword">Change password</string>
    <string name="Chat">Chat</string>
    <string name="ChooseFromLibrary">From Photo Library</string>
    <string name="ChooseInterests">Choose interests</string>
    <string name="ClickToFindOtherGroups">Explore our dedicated groups</string>
    <string name="Collapse">Collapse</string>
    <string name="Comment">Comment</string>
    <string name="CommentTooLong">This comment is too long. Maximum is 10,000 characters</string>
    <string name="Commenting">Commenting</string>
    <string name="CommentsDisabled">Comments disabled</string>
    <string name="CommentsEnabled">Comments enabled</string>
    <string name="CommentsOnVentDisabled">Comments on this vent are disabled</string>
    <string name="CommunityGuidlines"><u>Community Guidelines</u></string>
    <string name="Confirm">Confirm</string>
    <string name="ConfirmEmailAddress">Confirm email address</string>
    <string name="ConfirmPassword">Repeat password</string>
    <string name="ContentSettings">Content Settings</string>
    <string name="ContinueReading">Continue reading</string>
    <string name="Copy">Copy</string>
    <string name="Create">Create</string>
    <string name="CreateAGroup">Create a Group</string>
    <string name="CreateChat">Create Chat</string>
    <string name="CreateVent">Create Vent</string>
    <string name="CurrentEmail">Current Email</string>
    <string name="DateJump">Time Travel</string>
    <string name="Deactivate">Deactivate</string>
    <string name="DeactivateAccount">Deactivate account</string>
    <string name="DeactivateAccountBlurb">"This will delete your account and any interactions or comments you've made. Are you sure you want to deactivate?"</string>
    <string name="Delete">Delete</string>
    <string name="DeleteConversation">Delete Conversation</string>
    <string name="DeleteGroup">Delete group</string>
    <string name="DeleteGroupBody">This will delete the group. Existing Vents to this group will not be deleted however new posts to this Group will no longer be possible. Are you sure you want to proceed?</string>
    <string name="DeleteGroupTitie">Delete %1$s</string>
    <string name="Deleting">Deleting</string>
    <string name="Demote">Demote</string>
    <string name="Discard">Discard</string>
    <string name="DiscardComment">Discard Comment</string>
    <string name="DiscardVent">Discard Vent</string>
    <string name="DiscoverBlurb">"Earn your Angel when your friends join our vibrant and supportive community. Invite your friends now, they'll love you for it!"</string>
    <string name="DisplayBioPublicly">Display bio publicly</string>
    <string name="Done">Done</string>
    <string name="DontKeepActsEnabled">"Enabling the \"Don't Keep Activities\" setting in Developer Options degrades performance. It is strongly recommended to keep this option disabled."</string>
    <string name="DontShowThisMessageAgain">"Don't show this message again"</string>
    <string name="Edit">Edit</string>
    <string name="EditBackground">Edit background</string>
    <string name="EditGroup">Edit Group</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="EmailAddress">Email address</string>
    <string name="EmailConfirmation">Email confirmation</string>
    <string name="EmailConfirmed">Email confirmed</string>
    <string name="EmailDespatched">Email despatched</string>
    <string name="EmailNotConfirmed">Email not confirmed</string>
    <string name="EmailNotPublic">Email (not displayed publicly)</string>
    <string name="EmailSettings">Email settings</string>
    <string name="EmotionStore_img">Emotion Store    &lt;img></string>
    <string name="Emotionless">Emotionless</string>
    <string name="EmotionsHidden">Emotions hidden</string>
    <string name="EmotionsShown">Emotions visible</string>
    <string name="EnableMessaging">Enable messaging</string>
    <string name="Expand">Expand</string>
    <string name="ExpandComment">Expand comment</string>
    <string name="ExplicitContent">Explicit Content</string>
    <string name="FailedDownloadLargeProfilePic">Failed loading image</string>
    <string name="FailedGetAddress">Failed to get location</string>
    <string name="FailedGetConversation">Failed get conversation</string>
    <string name="FailedGetPhotosFolder">Failed get Photos folder</string>
    <string name="FailedMakeInvite">Failed make invite</string>
    <string name="FailedRegisterForNotifications">Failed register for notifications</string>
    <string name="FailedToMakeTempFile">Failed to make temp file</string>
    <string name="FailedUploadPicture">Failed upload picture</string>
    <string name="Favorite">Favorite</string>
    <string name="Favorites">Favorites</string>
    <string name="FileDescriptorError">File descriptor error</string>
    <string name="FileIOError">File IO error</string>
    <string name="ForgotPassword">Forgot password</string>
    <string name="ForgotUsername">Forgot username or password?</string>
    <string name="FrequentlyAskedQuestions"><u>Frequently Asked Questions</u></string>
    <string name="FromXXX">From %1$s</string>
    <string name="FromYourContactsOrSocialNetworks">From your contacts or social networks</string>
    <string name="GRoupMuteAfterListn">"All posts made to this group will appear in your feed. If you would prefer that they didn't, you can Mute the group. Would you like to mute this group?"</string>
    <string name="Gallery">Gallery</string>
    <string name="GettingLocation">Getting location …</string>
    <string name="GiftEmotions">Gift Emotions</string>
    <string name="IWantToBeAnon">Remain private</string>
    <string name="IfYouChangeYourEmail">If you change your email address, you will be sent an email that will require confirmation before you can interact or post.</string>
    <string name="IfYouHaveNotRecievedEmail">If you have not received a confirmation email, you can send another via the link below. Please check all folders in your inbox.</string>
    <string name="ItsOkToIncludeMyName">Include my username</string>
    <string name="MessageSettings">Message settings</string>
    <string name="Messages">Messages</string>
    <string name="Mute">Mute</string>
    <string name="NotificationSettings">Notification settings</string>
    <string name="Notifications">Notifications</string>
    <string name="PersonalizeYourInvite">Personalize your invite</string>
    <string name="PrivateInformation">Private Information</string>
    <string name="PublicInformation">Public Information</string>
    <string name="ReadReceipts">Read receipts</string>
    <string name="RemoveAds_img">Remove Ads    &lt;img></string>
    <string name="RemoveComment">Delete comment</string>
    <string name="RemoveUserX">Remove %1$s</string>
    <string name="RemoveVent">Remove vent</string>
    <string name="Reply">Reply</string>
    <string name="Report">Report</string>
    <string name="Report3BlockBlurb">%1$s will not be able to listen to you or view your vents</string>
    <string name="Report3ThanksHdr">Thank you for your report</string>
    <string name="Report3ThanksHdrBlurb_withStuff">Thank you for making Vent a safer place. Here are some tools that could help:</string>
    <string name="SendConfirmationEmail">Send confirmation email</string>
    <string name="SetAccountPrivateBlurb">Setting your account to private will hide your vents from non-approved listeners and require you to approve listen requests. Your existing listeners will not be affected.</string>
    <string name="SetAccountToPrivate">Set account to private</string>
    <string name="SetBioPrivateBlurb">Displaying your bio publicly makes it visible to everyone. You can disable this so that only your listeners can see your bio. Turning this off will hide your bio from your web profile page.</string>
    <string name="Settings">Settings</string>
    <string name="SignOut">Sign Out</string>
    <string name="Subscribe">Subscribe</string>
    <string name="SwitchUser">Switch User</string>
    <string name="TalkToKoko">Talk to Koko</string>
    <string name="TalkToKokoBlurb">"If you could use some kind words right now, you might like talking to Koko. It's a support community, that helps each other anonymously through DM."</string>
    <string name="TalkToKokobot">Talk to Kokobot</string>
    <string name="TypingIndicators">Typing indicators</string>
    <string name="Unblock">Unblock</string>
    <string name="Unmute">Unmute</string>
    <string name="Unsubscribe">Unsubscribe</string>
    <string name="Username">Username</string>
    <string name="WebProfile">Web Profile</string>
    <string name="inviteDlgBlurb">"Would you prefer to remain private? We won't mention your username unless you'd like us to."</string>
    <string name="nsfw_blurb">Enabling this setting will display explicit content in feeds. Disabling it will show a warning to ask if you want to reveal it.</string>
</resources>