<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/PersonalizeYourInvite" style="@style/MyDialogTitle" />
    <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:text="@string/inviteDlgBlurb" />
    <Button android:id="@id/anon" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/IWantToBeAnon" style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
    <Button android:id="@id/withname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ItsOkToIncludeMyName" style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
    <Button android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@android:string/cancel" style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
</LinearLayout>