<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout" android:background="@color/dn_windowBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/dn_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:background="@color/dn_white2_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/dn_black_text" android:id="@id/top_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/Report3ThanksHdr" />
            <TextView android:textSize="16.0sp" android:textColor="@color/dn_black_text" android:id="@id/top_blurb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/Report3ThanksHdrBlurb_withStuff" />
            <LinearLayout android:orientation="vertical" android:id="@id/block_stuff" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/dn_black_text" android:id="@id/blocktitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/BlockXXX" />
                <TextView android:textSize="16.0sp" android:textColor="@color/dn_black_text" android:id="@id/blockblurb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:text="@string/Report3BlockBlurb" />
                <Button android:id="@id/block" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" style="@style/ButtonBigBorder" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/koko_stuff" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/dn_black_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/TalkToKoko" />
                <TextView android:textSize="16.0sp" android:textColor="@color/dn_black_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:text="@string/TalkToKokoBlurb" />
                <Button android:id="@id/koko" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/TalkToKokobot" style="@style/ButtonBigBorder" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>