<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout" android:background="@color/dn_windowBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/dn_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:background="@color/dn_white2_background" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.SwitchCompat android:theme="@style/greenSwitch" android:textSize="16.0sp" android:textColor="@color/dn_black_text" android:gravity="center|left" android:id="@id/private_" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/SetAccountToPrivate" />
            <TextView android:textSize="12.0sp" android:textColor="@color/dn_grey55_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:text="@string/SetAccountPrivateBlurb" />
            <android.support.v7.widget.SwitchCompat android:theme="@style/greenSwitch" android:textSize="16.0sp" android:textColor="@color/dn_black_text" android:gravity="center|left" android:id="@id/private_bio" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/DisplayBioPublicly" />
            <TextView android:textSize="12.0sp" android:textColor="@color/dn_grey55_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:text="@string/SetBioPrivateBlurb" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>