<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout" android:background="@color/dn_windowBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/dn_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="vertical" android:background="@color/dn_white2_background" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.SwitchCompat android:theme="@style/greenSwitch" android:textSize="16.0dip" android:textColor="@color/dn_black_text" android:gravity="center|left" android:id="@id/enablemessaging" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/EnableMessaging" />
        <android.support.v7.widget.SwitchCompat android:theme="@style/greenSwitch" android:textSize="16.0dip" android:textColor="@color/dn_black_text" android:gravity="center|left" android:id="@id/readreceipts" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/ReadReceipts" />
        <android.support.v7.widget.SwitchCompat android:theme="@style/greenSwitch" android:textSize="16.0dip" android:textColor="@color/dn_black_text" android:gravity="center|left" android:id="@id/typingindicators" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/TypingIndicators" />
    </LinearLayout>
</LinearLayout>